# scion

./: BUILD.bazel  go.sum  scion.sh
doc/protocols/sigprefixlist/: MSToPCN.md  MSToPLN.md  MappingService.md  PublishingCosensusNode.md  PublishingGossipNode.md  PublishingListNode.md  SIGToMS.md  SigPrefixListProtocol.md
env/: common.sh
env/debian/: check  deps  pkgs.txt
go/cs/segreq/: authoritative.go  forwarder.go
go/lib/addr/: host.go
go/lib/ctrl/: BUILD.bazel  union.go
go/lib/ctrl/ctrl_msg/: msg.go
go/lib/ctrl/ms_mgmt/: BUILD.bazel  asaction.go  common.go  fullmap.go  pgncomm.go  pld.go  servertypes.go  signedlist.go  union.go
go/lib/ctrl/pcn_mgmt/: BUILD.bazel  mscomm.go  pcncomm.go  pld.go  plncomm.go  union.go
go/lib/ctrl/pgn_mgmt/: pgncomm.go  pld.go  plncomm.go  svccomm.go  union.go
go/lib/ctrl/pln_mgmt/: BUILD.bazel  mscomm.go  pld.go  plnlist.go  svccomm.go  union.go
go/lib/infra/: BUILD.bazel  common.go
go/lib/infra/infraenv/: infraenv.go
go/lib/infra/messenger/: BUILD.bazel  messenger.go  quic_response_writer.go  udp_response_writer.go
go/lib/infra/modules/segfetcher/: pather.go
go/lib/pathdb/sqlite/: sqlite.go
go/lib/topology/: BUILD.bazel  interface.go  topology.go
go/lib/topology/json/: json.go
go/ms/: BUILD.bazel  main.go
go/ms/internal/: types.go
go/ms/internal/handler/: svrhdlr.go
go/ms/internal/mscmn/: BUILD.bazel  common.go  msghandlers.go
go/ms/internal/mscrypto/: BUILD.bazel  config.go  key_loader.go  provider.go  signer.go
go/ms/internal/msmap/: BUILD.bazel  map.go
go/ms/internal/msmsgr/: BUILD.bazel  messenger.go
go/ms/internal/msprovider/: provider.go
go/ms/internal/msserver/: api.go  handlers.go  server.go
go/ms/internal/mstypes/: maptypes.go  servertypes.go
go/ms/internal/pgnentryhelper/: helper.go
go/ms/internal/servers/: handlers.go  server.go
go/ms/internal/sqlite/: db.go  deletes.go  inserts.go  queries.go  schema.go  types.go
go/ms/internal/sqlite3/: BUILD.bazel  db.go  deletes.go  inserts.go  queries.go  schema.go  types.go
go/ms/internal/types/: servertypes.go
go/ms/internal/validator/: BUILD.bazel  rpkivalidator.go
go/ms/pcncomm/: BUILD.bazel  pcncomm.go
go/ms/pgncomm/: pgncomm.go
go/ms/plncomm/: BUILD.bazel  plncomm.go
go/ms/sigcomm/: BUILD.bazel  mssighandlers.go
go/ms/sigreq/: mssighandlers.go  validator.sh
go/pcn/: BUILD.bazel  main.go
go/pcn/internal/pcncmn/: BUILD.bazel  common.go  msghandlers.go
go/pcn/internal/pcncrypto/: BUILD.bazel  config.go  key_loader.go  provider.go  signer.go
go/pcn/internal/pcnmsgr/: BUILD.bazel  messenger.go
go/pcn/internal/sqlite/: BUILD.bazel  db.go  inserts.go  queries.go  schema.go  types.go  updates.go
go/pcn/internal/types/: BUILD.bazel  types.go
go/pcn/mscomm/: BUILD.bazel  pcnmshandlers.go
go/pcn/pcncomm/: BUILD.bazel  pcncomm.go  pcnhandler.go
go/pcn/plncomm/: BUILD.bazel  plncomm.go
go/pgn/: main.go
go/pgn/internal/pgncmn/: common.go
go/pgn/internal/pgncrypto/: config.go  key_loader.go  provider.go  signer.go
go/pgn/internal/pgnentryhelper/: helper.go
go/pgn/internal/pgnmsgr/: messenger.go
go/pgn/internal/sqlite/: db.go  inserts.go  queries.go  schema.go  types.go  updates.go
go/pgn/internal/types/: types.go
go/pgn/mscomm/: pgnmshandlers.go
go/pgn/pgncomm/: pgncomm.go  pgnhandler.go
go/pgn/plncomm/: plncomm.go
go/pgn/svccomm/: pgnsvchandlers.go
go/pkg/ms/config/: BUILD.bazel  config.go  config_test.go  sample.go
go/pkg/ms/config/configtest/: BUILD.bazel  configtest.go
go/pkg/pcn/config/: BUILD.bazel  config.go  sample.go
go/pkg/pcn/config/configtest/: BUILD.bazel  configtest.go
go/pkg/pgn/config/: config.go  config_test.go  sample.go
go/pkg/pgn/config/configtest/: configtest.go
go/pkg/pln/config/: BUILD.bazel  config.go  config_test.go  sample.go
go/pkg/pln/config/configtest/: BUILD.bazel  configtest.go
go/pkg/sciond/fetcher/: fetcher.go
go/pkg/sig/config/: config.go  sample.go
go/pkg/sig/config/configtest/: configtest.go
go/pkg/trust/: BUILD.bazel  signer_gen_no_db.go
go/pln/: BUILD.bazel  main.go
go/pln/internal/plncmn/: BUILD.bazel  common.go  msghandlers.go
go/pln/internal/plncrypto/: BUILD.bazel  config.go  key_loader.go  provider.go  signer.go
go/pln/internal/plnmsgr/: BUILD.bazel  messenger.go
go/pln/internal/sqlite/: BUILD.bazel  db.go  inserts.go  queries.go  schema.go  types.go  updates.go
go/pln/mscomm/: BUILD.bazel  plnmshandlers.go
go/pln/pcncomm/: BUILD.bazel  plnpcnhandlers.go
go/pln/pgncomm/: plnpcnhandlers.go
go/pln/plncomm/: BUILD.bazel  plnhandlers.go
go/pln/propagator/: propagator.go
go/pln/propogator/: BUILD.bazel  propogator.go
go/pln/srvcomm/: plnmshandlers.go
go/pln/svccomm/: plnsvchandlers.go
go/proto/: BUILD.bazel  cereal.go  common.capnp.go  ctrl_pld.capnp.go  ms.capnp.go  pgn.capnp.go  pln.capnp.go  structs_gen_go.sh
go/scion-pki/certs/: renew_test.go
go/sig/: BUILD.bazel  main.go
go/sig/egress/: BUILD.bazel  api.go
go/sig/internal/cfgmgmt/: BUILD.bazel  cfg.go  key_loader.go
go/sig/internal/mscomm/: mscomm.go
go/sig/internal/sigcmn/: BUILD.bazel  common.go
go/sig/internal/sigcrypto/: BUILD.bazel  config.go  key_loader.go  provider.go  signer.go
go/sig/internal/sqlite/: BUILD.bazel  db.go  inserts.go  queries.go  schema.go  types.go
proto/: common.capnp  ctrl_pld.capnp  ms.capnp  pcn.capnp  pgn.capnp  pln.capnp
python/integration/siam/: run.py
python/integration/siam/config/: ms.conf  pgn.conf  pln.conf  sig.conf
python/integration/siam/end2end/: end2end_SIAM.topo  end2end_SIAM_tiny.topo  prefixes.json  services.json  services_less.json  sig.json
python/integration/siam/run/: r.sh
tools/: install_bazel  quiet
