load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

go_library(
    name = "go_default_library",
    srcs = ["plncomm.go"],
    importpath = "github.com/scionproto/scion/go/ms/plncomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/pln_mgmt:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/ms/internal/mscrypto:go_default_library",
        "//go/ms/internal/msmsgr:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/pkg/trust/compat:go_default_library",
    ],
)
