load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mssighandlers.go"],
    importpath = "github.com/scionproto/scion/go/ms/sigcomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/ctrl:go_default_library",
        "//go/lib/ctrl/ms_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/ms/internal/mscrypto:go_default_library",
        "//go/ms/internal/msmsgr:go_default_library",
        "//go/ms/internal/sqlite3:go_default_library",
        "//go/ms/internal/validator:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/proto:go_default_library",
    ],
)
