load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "pcncomm.go",
        "pcnhandler.go",
    ],
    importpath = "github.com/scionproto/scion/go/pcn/pcncomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl:go_default_library",
        "//go/lib/ctrl/pcn_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pcn/internal/pcncrypto:go_default_library",
        "//go/pcn/internal/pcnmsgr:go_default_library",
        "//go/pcn/internal/sqlite:go_default_library",
        "//go/pcn/plncomm:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/proto:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
