load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plncomm.go"],
    importpath = "github.com/scionproto/scion/go/pcn/plncomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/pcn_mgmt:go_default_library",
        "//go/lib/ctrl/pln_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pcn/internal/pcncrypto:go_default_library",
        "//go/pcn/internal/pcnmsgr:go_default_library",
        "//go/pcn/internal/types:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/pkg/trust/compat:go_default_library",
    ],
)
