load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plnmshandlers.go"],
    importpath = "github.com/scionproto/scion/go/pln/mscomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/pln/internal/plnmsgr:go_default_library",
        "//go/proto:go_default_library",
    ],
)
