load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plnpcnhandlers.go"],
    importpath = "github.com/scionproto/scion/go/pln/pcncomm",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/ctrl:go_default_library",
        "//go/lib/ctrl/pcn_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/pln/internal/plncrypto:go_default_library",
        "//go/pln/internal/plnmsgr:go_default_library",
        "//go/pln/internal/sqlite:go_default_library",
        "//go/proto:go_default_library",
    ],
)
