load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["propogator.go"],
    importpath = "github.com/scionproto/scion/go/pln/propogator",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/path_mgmt:go_default_library",
        "//go/lib/ctrl/seg:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pln/internal/plnmsgr:go_default_library",
    ],
)
