load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
       "asaction.go",
       "fullmap.go",
       "pld.go",
       "union.go",
       "signedlist.go",
    ],
    importpath = "github.com/scionproto/scion/go/lib/ctrl/ms_mgmt",
    visibility = ["//visibility:public"],
    deps = [
      "//go/proto:go_default_library",
      "//go/lib/common:go_default_library",
      "//go/lib/ctrl:go_default_library",
    ],
)
