load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["messenger.go"],
    importpath = "github.com/scionproto/scion/go/ms/internal/msmsgr",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/infra:go_default_library",
    ],
)
