load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "deletes.go",
        "inserts.go",
        "queries.go",
        "schema.go",
        "types.go",
    ],
    importpath = "github.com/scionproto/scion/go/ms/internal/sqlite3",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/ctrl:go_default_library",
        "//go/lib/infra/modules/db:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/proto:go_default_library",
        "@com_github_mattn_go_sqlite3//:go_default_library",
    ],
)
