load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "msghandlers.go",
    ],
    importpath = "github.com/scionproto/scion/go/pcn/internal/pcncmn",
    visibility = ["//go/pcn:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/infraenv:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/infra/modules/itopo:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pcn/internal/pcncrypto:go_default_library",
        "//go/pcn/internal/pcnmsgr:go_default_library",
        "//go/pcn/mscomm:go_default_library",
        "//go/pcn/pcncomm:go_default_library",
        "//go/pkg/pcn/config:go_default_library",
    ],
)
