load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["messenger.go"],
    importpath = "github.com/scionproto/scion/go/pcn/internal/pcnmsgr",
    visibility = ["//go/pcn:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/ctrl/pcn_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pcn/internal/pcncrypto:go_default_library",
        "//go/pcn/internal/sqlite:go_default_library",
    ],
)
