load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "sample.go",
    ],
    importpath = "github.com/scionproto/scion/go/pkg/ms/config",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/config:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/serrors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
)
