load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "msghandlers.go",
    ],
    importpath = "github.com/scionproto/scion/go/pln/internal/plncmn",
    visibility = ["//go/pln:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/env:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/infra/infraenv:go_default_library",
        "//go/lib/infra/messenger:go_default_library",
        "//go/lib/infra/modules/itopo:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/pkg/pln/config:go_default_library",
        "//go/pln/internal/plncrypto:go_default_library",
        "//go/pln/internal/plnmsgr:go_default_library",
        "//go/pln/mscomm:go_default_library",
        "//go/pln/pcncomm:go_default_library",
        "//go/pln/plncomm:go_default_library",
    ],
)
