load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "key_loader.go",
        "provider.go",
        "signer.go",
    ],
    importpath = "github.com/scionproto/scion/go/pln/internal/plncrypto",
    visibility = ["//go/pln:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/cert_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pkg/trust:go_default_library",
    ],
)
