load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["messenger.go"],
    importpath = "github.com/scionproto/scion/go/pln/internal/plnmsgr",
    visibility = ["//go/pln:__subpackages__"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/ctrl/pln_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/pln/internal/plncrypto:go_default_library",
        "//go/pln/internal/sqlite:go_default_library",
    ],
)
