load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cfg.go"],
    importpath = "github.com/scionproto/scion/go/sig/internal/cfgmgmt",
    visibility = ["//visibility:public"],
    deps = [
        	"//go/lib/addr:go_default_library",
	"//go/lib/ctrl/cert_mgmt:go_default_library",
	"//go/lib/scrypto/cppki:go_default_library",
	"//go/lib/serrors:go_default_library",
	"//go/lib/snet:go_default_library",
	"//go/sig/internal/sigcmn:go_default_library",


    ],
)
