load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cfg.go",
        "key_loader.go",
    ],
    importpath = "github.com/scionproto/scion/go/sig/internal/cfgmgmt",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/ctrl/cert_mgmt:go_default_library",
        "//go/lib/ctrl/ms_mgmt:go_default_library",
        "//go/lib/infra:go_default_library",
        "//go/lib/log:go_default_library",
        "//go/lib/scrypto/cppki:go_default_library",
        "//go/lib/serrors:go_default_library",
        "//go/lib/sigjson:go_default_library",
        "//go/lib/snet:go_default_library",
        "//go/pkg/trust:go_default_library",
        "//go/proto:go_default_library",
        "//go/sig/internal/sigcmn:go_default_library",
        "//go/sig/internal/sigcrypto:go_default_library",
        "//go/sig/internal/sqlite:go_default_library",
    ],
)
