load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["provider.go"],
    importpath = "github.com/scionproto/scion/go/sig/internal/sigcrypto",
    visibility = ["//visibility:public"],
    deps = [
        		"//go/lib/addr:go_default_library",
	"//go/lib/ctrl/cert_mgmt:go_default_library",
	"//go/lib/infra:go_default_library",
	"//go/lib/scrypto/cppki:go_default_library",
	"//go/lib/serrors:go_default_library",
	"//go/lib/snet:go_default_library",
	"//go/pkg/trust:go_default_library",
    ],
)
