load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go","inserts.go","queries.go","schema.go","types.go"],
    importpath = "github.com/scionproto/scion/go/sig/internal/sqlite",
    visibility = ["//visibility:public"],
    deps = [
        	"//go/lib/infra/modules/db:go_default_library"
    ],
)
